--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@
 title: Movement Visualization
 description: Modern-Blog A Elegant template for Jekyll
 keywords: Modern, Blogging, Fun
-author: Wferr
+author: Yuhang
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "" # the base hostname & protocol for your site
