--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 title: Visualization of Movement
 email: gu_yuhang@outlook.com
 description: Gallery of Flow Maps.
-url:
-#url: https://yuhanggu.github.io/MovementVis
+#url:
+url: https://yuhanggu.github.io/MovementVis
 
 
 #
