--- a/_config.yml
+++ b/_config.yml
@@ -38,10 +38,10 @@ owner:
   avatar: tianyuan.png
   job: "Visualization of Movement"
   bio: "Gallery of Flow Maps"
-  email:
-  disqus-shortname:
-  twitter: #username
-  facebook: #username
+  email: gu_yuhang@outlook.com
+  disqus-shortname: visualization-of-movement
+  twitter: YuriEngelhardt
+  facebook: ITC.UTwente
   google:
     plus: #username
     analytics:
@@ -55,7 +55,7 @@ owner:
   linkedin: #username
   skype: #username
   xing: #username
-  instagram: #username
+  instagram: movementvis
   lastfm: #username
   tumblr: #username
   pinterest: #username
@@ -64,7 +64,7 @@ owner:
   dribbble: #username
   youtube: #username
   soundcloud: #username
-  weibo: #username
+  weibo: u/6037607654?refer_flag=1005055013_&is_all=1
   flickr: #username
-  500px: #username
+  500px: yuhanggu
   codepen: #username
