--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ owner:
   dribbble: #username
   youtube: #username
   soundcloud: #username
-  weibo: u/6037607654?refer_flag=1005055013_&is_all=1
+  weibo: #u/6037607654?refer_flag=1005055013_&is_all=1
   flickr: #username
-  500px: yuhanggu
+  500px: #yuhanggu
   codepen: #username
