--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ kramdown:
 ####################################
 #
 owner:
-  name: Yuhang Gu
+  name: Movement-vis
   avatar: tianyuan.png
   job: "Visualization of Movement"
   bio: "Gallery of Flow Maps"
