--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 title: Visualization of Movement
 email: gu_yuhang@outlook.com
 description: Gallery of Flow Maps.
-#url: http://localhost:4000
-url: https://yuhanggu.github.io/MovementVis
+url: http://localhost:4000
+#url: https://yuhanggu.github.io/MovementVis
 
 
 #
