--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ kramdown:
 #
 owner:
   name: Movement-vis
-  avatar: tianyuan.png
+  avatar: oranje.png
   job: "Visualization of Movement"
   bio: "Gallery of Flow Maps"
   email: gu_yuhang@outlook.com
